--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1319,7 +1319,7 @@ service dhcpcd_bt-pan /system/bin/dhcpcd -BKLG
 service loc_launcher /system/bin/loc_launcher
     #loc_launcher will start as root and set its uid to gps
     class late_start
-    group gps inet net_raw diag net_admin wifi
+     group gps inet diag wifi
     
 service ril-daemon /system/bin/rild
     class main
