--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -29,6 +29,8 @@ import init.qcom.usb.rc
 import init.qcom.power.rc
 
 on early-init
+    export LD_SHIM_LIBS /system/lib/libril.so|libshim_ril.so
+    
     mount debugfs debugfs /sys/kernel/debug
     chmod 0755 /sys/kernel/debug
     write /sys/block/mmcblk0/queue/scheduler noop
@@ -38,7 +40,6 @@ on early-init
     symlink /data/tombstones /tombstones
 
 on init
-    export LD_SHIM_LIBS /system/lib/libril.so|libril_shim.so:rmt_storage|librmt_shim.so:/system/vendor/lib/libqc-opt.so|libshim_qcopt.so
     mkdir /efs 0771 system radio
 
     # Set permissions for persist partition
