--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1369,6 +1369,7 @@ service olsrd /system/bin/olsrd -f /etc/wifi/olsrd.conf
     class main
     disabled
     oneshot
+    seclabel u:r:macloader:s0
 
 service dhcpcd_bt-pan /system/bin/dhcpcd -BKLG
     class late_start
