--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -32,6 +32,7 @@ on early-init
     setprop sys.boot_completed 0
 
     mount debugfs debugfs /sys/kernel/debug
+    chmod 0755 /sys/kernel/debug
     write /sys/block/mmcblk0/queue/scheduler noop
 
     mkdir /firmware 0771 system system
