init: Change ownership of wifi firmware reload sysfs paths
This will let the wifi hal run as "wifi" user and not need root
permissions to access this path for firmware reloads.

Bug: 33435250
Test: Compiles.
Change-Id: I84a38cea5e0f729147c3191c3485a3738d7838ef

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -109,6 +109,9 @@ on post-fs
     chmod 666 /dev/mobicore-user
     chown system system /dev/mobicore
     chown radio system /dev/mobicore-user
+    
+    # Wifi firmware reload path
+    chown wifi wifi /sys/module/wlan/parameters/fwpat
 
 on post-fs-data
 
