--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -35,6 +35,8 @@ on early-init
     chmod 0755 /sys/kernel/debug
     write /sys/block/mmcblk0/queue/scheduler noop
 
+    write /sys/block/zram0/comp_algorithm lz4
+
     mkdir /firmware 0771 system system
     mkdir /firmware-modem 0771 system system
     symlink /data/tombstones /tombstones
@@ -58,6 +60,7 @@ on fs
     write /sys/devices/msm_sdcc.2/mmc_host/mmc1/power/control on
 
     mount_all fstab.qcom
+    swapon_all fstab.qcom
 
     # Keeping following partitions outside fstab file. As user may not have
     # these partition flashed on the device. Failure to mount any partition in fstab file
