--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1582,7 +1582,13 @@ on property:sys.boot_completed=1
     # Post boot services
     start mpdecision
 
-# Symlink telephony.db and preferred-apn.xml
+    # Enable msm hotplug for boot
+    write /sys/module/msm_hotplug/msm_enabled 1
+    write /sys/module/msm_hotplug/cpus_boosted 2
+    write /sys/module/msm_hotplug/max_cpus_online 4
+    write /sys/module/msm_hotplug/min_cpus_online 2
+    
+    # Symlink telephony.db and preferred-apn.xml
     mkdir /data/user/0/com.android.providers.telephony/databases 0700 radio radio
     mkdir /data/user/0/com.android.providers.telephony/shared_prefs 0700 radio radio
     mkdir /data/user/0/com.android.providers.telephony/files 0700 radio radio
