--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -255,8 +255,6 @@ on post-fs-data
     # Enable the setgid bit on the directory
     chmod 2770 /data/audio
 
-    setprop vold.post_fs_data_done 1
-
     #Create a folder for SRS to be able to create a usercfg file
     mkdir /data/data/media 0770 media media
 
@@ -393,6 +391,12 @@ on post-fs-data
 
     chown system camera /sys/class/flash/flash/flash_power
     chmod 660 /sys/class/flash/flash/flash_power
+    
+    setprop vold.post_fs_data_done 1
+    
+    # Create directories for perfd
+    mkdir /data/misc/perfd 2755 root system
+    mkdir /data/system/perfd 2770 root system
 
 on early-boot
     # set RLIMIT_MEMLOCK to 64MB
@@ -466,7 +470,7 @@ on boot
     #Audience ES705 UART
     mkdir /data/firmware
     chmod 0660 /dev/ttyHS3
-    chown media system /dev/ttyHS3
+    chown media audio /dev/ttyHS3
     chmod 0770 /data/firmware
     chown system system /data/firmware
 
@@ -1147,6 +1151,7 @@ on boot
     chmod 0660 /dev/pn547
     chown nfc nfc /dev/pn547
     symlink /dev/pn547 /dev/pn544
+    symlink /dev/pn547 /dev/pn54x
 
     # NFC_SEC
     chmod 0660 /dev/sec-nfc
@@ -1303,7 +1308,10 @@ service mpdecision /system/bin/mpdecision --avg_comp
 service thermal-engine /system/vendor/bin/thermal-engine
     class main
     user root
-    group radio system
+    socket thermal-send-client stream 0666 system system
+    socket thermal-recv-client stream 0660 system system
+    socket thermal-recv-passive-client stream 0666 system system
+    group root
 
 service sensorhubservice /system/bin/sensorhubservice
     class main
@@ -1311,7 +1319,7 @@ service sensorhubservice /system/bin/sensorhubservice
     group input
 
 service time_daemon /system/bin/time_daemon
-    class main
+    class late_start
     user root
     group root
 
@@ -1590,7 +1598,8 @@ on property:sys.boot_completed=1
     chown system radio /sys/class/sec/sec_epen/boost_level
 
     # Post boot services
-    start mpdecision
+    #start mpdecision
+    rm /data/system/perfd/default_values
 
     # Enable msm hotplug for boot
     write /sys/module/msm_hotplug/msm_enabled 1
