init.qcom.rc: add permission for icd

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -360,6 +360,8 @@ on post-fs-data
 
     # icd
     exec icd_check
+    chown system system /dev/icd
+    chmod 0644 /dev/icd
     write /dev/icdr 0
     chown system system /dev/icdr
     chmod 0644 /dev/icdr
