--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -479,6 +479,10 @@ on boot
     # Permissions for usb_lock
     chown system radio /sys/class/android_usb/android0/usb_lock
 
+    # misc radio files
+    chmod 0664 /data/data/data_usage_rx
+    chmod 0664 /data/data/data_usage_tx
+
     # For WiFi
     chown wifi wifi /dev/rfkill
     chmod 0600 /dev/rfkill
@@ -533,6 +537,9 @@ on boot
 
     #For bridgemgr daemon to inform the USB driver of the correct transport
     chown radio radio /sys/class/android_usb/f_rmnet_smd_sdio/transport
+
+    chown radio radio /sys/class/net/rmnet_usb0/queues/rx-0/rps_cpus
+    chmod 664 /sys/class/net/rmnet_usb0/queues/rx-0/rps_cpus
 
     # For setting tcp delayed ack
     chown system system /sys/kernel/ipv4/tcp_delack_seg
