--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -620,9 +620,6 @@ on boot
     mkdir /dev/validity 0770 system system
     mkdir /data/validity 0770 system system
 
-    # Fingerprint_sensor
-    chown system radio /sys/class/fingerprint/fingerprint/type_check
-
     # SEC DVFS sysfs node
     chown radio system /sys/power/cpufreq_max_limit
     chown radio system /sys/power/cpufreq_min_limit
@@ -1321,9 +1318,9 @@ service qcamerasvr /system/bin/mm-qcamera-daemon
 #    group gps qcom_oncrpc
 
 service qseecomd /system/bin/qseecomd
-    class core
+    class late_start
     user root
-    group root
+    group system
 
 service mpdecision /system/bin/mpdecision --avg_comp
     class main
