--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1318,8 +1318,7 @@ service qseecomd /system/bin/qseecomd
 service mpdecision /system/bin/mpdecision --avg_comp
     class main
     user root
-    group system
-    writepid /dev/cpuset/system-background/tasks
+    group root readproc
     disabled
 
 service thermal-engine /system/vendor/bin/thermal-engine
