tblte: switch to TimeKeep
Change-Id: Ia100fb3b2a619dc00ed85bd34a61ed6f1b75964a

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1343,10 +1343,11 @@ service sensorhubservice /system/bin/sensorhubservice
     user system
     group input
 
-service time_daemon /system/bin/time_daemon
-    class main
+service timekeep /system/bin/timekeep restore
+    class late_start
     user root
     group root
+    oneshot
 
 service audiod /system/bin/audiod
     class late_start
