--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1625,7 +1625,7 @@ on property:sys.boot_completed=1
     chown system radio /sys/class/sec/sec_epen/boost_level
 
     # Post boot services
-    #start mpdecision
+    start mpdecision
     rm /data/system/perfd/default_values
 
     # Enable intelli-thermal for boot
