tblte-common: updates configs  from DQA1
Update by me: Delete space after android signature (see this in build process)

Change-Id: Icd0ae3d315dd8dbc966585427d212b26d0d08d47

--- a/configs/libnfc-sec.conf
+++ b/configs/libnfc-sec.conf
@@ -88,7 +88,15 @@ P2P_LISTEN_TECH_MASK=0xC5
 MAX_RF_DATA_CREDITS=1
 
 ###############################################################################
-# 6) Other Information
+# When disconnecting from Oberthur secure element, perform a warm-reset of
+# the secure element to deselect the applet.
+# The default hex value of the command is 0x3.  If this variable is undefined,
+# then this feature is not used.
+# 6) OBERTHUR_WARM_RESET_COMMAND must be enabled for all eSE model
+# OBERTHUR_WARM_RESET_COMMAND=0x03
+
+###############################################################################
+# 7) Other Information
 # It will be checked in next version.
 ###############################################################################
 
@@ -140,7 +148,7 @@ NFC_WAKE_DELAY=20
 ###############################################################################
 # Firmware patch file
 #  If the value is not set then patch download is disabled.
-#FW_PATCH="/vendor/firmware/sec_s3fnrn3_firmware.bin"
+# FW_PATCH="/vendor/firmware/sec_s3fnrn3_firmware.bin"
 
 ###############################################################################
 # Not used in S.LSI solution
@@ -247,13 +255,6 @@ NFA_HCI_STATIC_PIPE_ID_F3=0x71
 NFA_HCI_STATIC_PIPE_ID_F4=0x71
 
 ###############################################################################
-# When disconnecting from Oberthur secure element, perform a warm-reset of
-# the secure element to deselect the applet.
-# The default hex value of the command is 0x3.  If this variable is undefined,
-# then this feature is not used.
-#OBERTHUR_WARM_RESET_COMMAND=0x03
-
-###############################################################################
 # This setting allows you to disable registering the T4t Virtual SE that causes
 # the NFCC to send PPSE requests to the DH.
 # The default setting is enabled (i.e. T4t Virtual SE is registered).
@@ -316,6 +317,6 @@ SCREEN_OFF_POWER_STATE=3
 # detected.  The first byte is the length of the AID.  Maximum length is 16.
 AID_FOR_EMPTY_SELECT={08:A0:00:00:01:51:00:00:00}
 
-
 NCI_HAL_MODULE="nfc_nci"
+
 
