--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1192,6 +1192,7 @@ service qseecomd /system/bin/qseecomd
     class core
     user root
     group root
+    disabled
 
 service mpdecision /system/bin/mpdecision --avg_comp
     class main
