--- a/configs/gps.conf
+++ b/configs/gps.conf
@@ -9,7 +9,7 @@ XTRA_SERVER_3=http://xtrapath3.izatcloud.net/xtra3grc.bin
 #AUTO    = 1
 #XTRA2   = 2
 #XTRA3   = 3
-XTRA_VERSION_CHECK=0
+XTRA_VERSION_CHECK=1
 
 # Error Estimate
 # _SET = 1
@@ -40,8 +40,8 @@ INTERMEDIATE_POS=0
 # default - non is locked for backward compatibility
 #GPS_LOCK = 0
 
-# supl version 1.0
-SUPL_VER=0x10000
+# supl version 2.0
+# SUPL_VER=0x20000
 
 # Emergency SUPL, 1=enable, 0=disable
 SUPL_ES=0
@@ -58,7 +58,7 @@ USE_EMERGENCY_PDN_FOR_EMERGENCY_SUPL=1
 #MSA=0X2
 #MSB=0X1
 #Sensor R&D : Change default bit mask
-SUPL_MODE=
+# SUPL_MODE=1
 
 # GPS Capabilities bit mask
 # SCHEDULING = 0x01
@@ -67,7 +67,7 @@ SUPL_MODE=
 # ON_DEMAND_TIME = 0x10
 # GEOFENCE = 0x20
 # default = ON_DEMAND_TIME | MSA | MSB | SCHEDULING | GEOFENCE
-CAPABILITIES=0x37
+#CAPABILITIES=0x37
 
 # Accuracy threshold for intermediate positions
 # less accurate positions are ignored, 0 for passing all positions
@@ -100,7 +100,7 @@ CAPABILITIES=0x37
 # 1: Enable LPP_User_Plane on LTE
 # 2: Enable LPP_Control_Plane
 # 3: Enable both LPP_User_Plane and LPP_Control_Plane
-LPP_PROFILE = 0 # Sensor R&D : This will not be injected to MODEM
+# LPP_PROFILE = 0 # Sensor R&D : This will not be injected to MODEM
 
 ################################
 # EXTRA SETTINGS
@@ -116,7 +116,7 @@ SGLTE_TARGET=0
 # 0x1: RRC CPlane
 # 0x2: RRLP UPlane
 # 0x4: LLP Uplane
-A_GLONASS_POS_PROTOCOL_SELECT = 0 #Sensor R&D : This will not be injected to MODEM
+#A_GLONASS_POS_PROTOCOL_SELECT = 0 #Sensor R&D : This will not be injected to MODEM
 
 ##################################################
 # Delete only Ephemeris files
