--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -34,6 +34,8 @@ on early-init
     mount debugfs debugfs /sys/kernel/debug
     chmod 0755 /sys/kernel/debug
     write /sys/block/mmcblk0/queue/scheduler noop
+    
+    write /sys/block/zram0/comp_algorithm lz4
 
     mkdir /firmware 0771 system system
     mkdir /firmware-modem 0771 system system
@@ -50,10 +52,13 @@ on init
 
     # Support legacy paths
     symlink /sdcard /storage/sdcard0
+    
+     write /proc/sys/vm/page-cluster 0
 
 on fs
     mount_all fstab.qcom
-    write /proc/sys/vm/swappiness 100
+    write /proc/sys/vm/swappiness 100    
+    swapon_all fstab.qcom
 
     # Keeping following partitions outside fstab file. As user may not have
     # these partition flashed on the device. Failure to mount any partition in fstab file
