--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -39,6 +39,8 @@ on early-init
     mkdir /firmware-modem 0771 system system
     symlink /data/tombstones /tombstones
 
+    setprop ro.wcnss.serialno ${ro.boot.serialno}
+
 on init
     mkdir /efs 0771 system radio
 
