tblte-common: sepolicy: Fix sysfs_devices_system_cpu label
some files in /sys/devices/system/cpu are created after the restorecon of
/sys/. These files receive the default label "sysfs"
Restorecon again to give new files the correct label

Change-Id: Ie45c49253726a37fc0f9a0e94c19a92496f3cff8

--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -1,7 +1,7 @@
 on charger
     #low power governing
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
-    restorecon_recursive /sys/devices/system/cpu/cpufreq/interactive
+    restorecon -R /sys/devices/system/cpu
     write /sys/devices/system/cpu/cpu1/online 0
     write /sys/devices/system/cpu/cpu2/online 0
     write /sys/devices/system/cpu/cpu3/online 0
@@ -12,16 +12,11 @@ on charger
     write /sys/module/msm_pm/modes/cpu0/standalone_power_collapse/idle_enabled 1
     write /sys/module/msm_pm/modes/cpu0/retention/idle_enabled 1
 
-service charger /sbin/healthd -c
-    class charger
-    critical
-    seclabel u:r:healthd:s0
-    
 on boot
     # Note Edge boots with performance governor.
     # Switch one core to interactive to set permissions, for power hal and system server.
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
-    restorecon_recursive /sys/devices/system/cpu/cpufreq/interactive
+    restorecon -R /sys/devices/system/cpu
     chown system system /sys/devices/system/cpu/cpufreq/interactive/timer_rate
     chmod 0660 /sys/devices/system/cpu/cpufreq/interactive/timer_rate
     chown system system /sys/devices/system/cpu/cpufreq/interactive/timer_slack
